--- a/home.html
+++ b/home.html
@@ -1,21 +1,87 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
+	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE10">
 	<meta name="viewport" content="width=device-width, initial-scale=0.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" href="style/sass.css">
-	<title>Document</title>
+	<title>温州大学</title>
 </head>
 <body>
 	<div class="index-page">
 		<div class="items-btn">
 			<ul>
 				<li>
-					<a href="#">
-						<i class="icons-icon1"></i>
+					<a href="AboutUs.aspx">
+						<i class="icon1"></i>
 						学校概况
 					</a>
+				</li>
+				<li>
+					<a href="News.aspx">
+						<i class="icon2"></i>
+						新闻中心
+					</a>
+				</li>
+				<li>
+                    <a href="News.aspx?ColumnID=3">
+                        <i class="icon3"></i>
+                        通知公告
+                    </a>
+				</li>
+				<li>
+					<a href="AboutUs.aspx?ColumnID=40">
+						<i class="icon4"></i>
+						人才培养
+					</a>
+				</li>
+				<li>
+                    <a href="AboutUs.aspx?ColumnID=52">
+                        <i class="icon5"></i>
+                        学科建设
+                    </a>
+				</li>
+				<li>
+                    <a href="AboutUs.aspx?ColumnID=56">
+                        <i class="icon6"></i>
+                        校园文化
+                    </a>
+				</li>
+				<li>
+                    <a href="AboutUs.aspx?ColumnID=61">
+                        <i class="icon7"></i>
+                        合作交流
+                    </a>
+				</li>
+				<li>
+					<a href="AboutUs.aspx?ColumnID=106">
+						<i class="icon8"></i>
+						信息服务
+					</a>
+				</li>
+				<li>
+                    <a href="News.aspx?ColumnID=4">
+                        <i class="icon9"></i>
+                        招标信息
+                    </a>
+				</li>
+				<li>
+                    <a href="News.aspx?ColumnID=6">
+                        <i class="icon10"></i>
+                        媒体温大
+                    </a>
+				</li>
+				<li>
+                    <a href="News.aspx?ColumnID=90">
+                        <i class="icon11"></i>
+                        温大声音
+                    </a>
+				</li>
+				<li>
+                    <a href="News.aspx?ColumnID=5">
+                        <i class="icon12"></i>
+                        视频温大
+                    </a>
 				</li>
 			</ul>
 		</div>
