--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
+	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE10">
 	<meta name="viewport" content="width=device-width, initial-scale=0.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 	<link rel="stylesheet" href="style/sass.css">
-	<title>Document</title>
+	<title>温州大学</title>
+	<script src="js/jquery/jquery/1.8.3/jquery.js"></script>
+	<script src="js/sea.js"></script>
+	<script src="js/config.js"></script>
 </head>
 <body>
 	<div class="start-page">
