--- a/index.html
+++ b/index.html
@@ -1,18 +1,30 @@
 ﻿<!doctype html>
-<html lang="en">
+<html lang="en" class="loading">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE10">
-	<meta name="viewport" content="width=device-width, initial-scale=0.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
-	<link rel="stylesheet" href="style/sass.css">
-	<title>温州大学</title>
-	<script src="js/jquery/jquery/1.8.3/jquery.js"></script>
-	<script src="js/sea.js"></script>
-	<script src="js/config.js"></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE10">
+    <meta name="viewport" content="width=device-width, initial-scale=0.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <link rel="stylesheet" href="style/sass.css">
+    <title>温州大学</title>
+    <script src="js/jquery/jquery/1.8.3/jquery.js"></script>
+    <script src="js/sea.js"></script>
+    <script src="js/config.js"></script>
 </head>
 <body>
-	<div class="start-page">
-		<a href="home.html"><div class="logo"></div></a>
-	</div>
+    <div class="start-page">
+        <a href="home.html"><div class="logo"></div></a>
+    </div>
+    <div class="loading_dark"></div>
+    <div id="loading_mask">
+        <div class="loading_mask">
+            <ul class="anm">
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
